--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang=en>
-<title>Weather App</title>
-<link href="WeatherCSS/Weather.css" rel="stylesheet" type="text/css"
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./WeatherCSS/Weather.css" />
+    <title>Weather</title>
+</head>
 <body>
-    Interactive Weather Web App
+    <div class="location">
+        <h1 class="location-timezone">Timezone</h1>
+        <p>Icon</p>
+    </div>
+    <div class="temperature">
+        <h2 class="degree">34</h2>
+        <div class="description">It's cold</div>
+    </div>
+    <script src="./WeatherJS/Weather.js"></script>
 </body>
-
 </html>
