--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>Icon</p>
     </div>
     <div class="temperature">
-        <h2 class="degree">34</h2>
-        <div class="description">It's cold</div>
+        <h2 class="temperature-degree">34</h2>
+        <div class="temperature-description">It's cold</div>
     </div>
     <script src="./WeatherJS/Weather.js"></script>
 </body>
