--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css"/>
     <title>Weather</title>
 </head>
 <body>
@@ -13,7 +13,10 @@
         <p>Icon</p>
     </div>
     <div class="temperature">
-        <h2 class="temperature-degree">34</h2>
+        <div class="degree-section">
+            <h2 class="temperature-degree">34</h2>
+            <span>F</span>
+        </div>  
         <div class="temperature-description">It's cold</div>
     </div>
     <script src="./WeatherJS/Weather.js"></script>
