Adding feature to switch between Celsius and Farenheit with click

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>  
         <div class="temperature-description">It's cold</div>
     </div>
-    <script src="./skycons/skycons.js"></script>
+    <script src="./skycons.js"></script>
     <script src="./WeatherJS/Weather.js"></script>
 </body>
 </html>
