--- a/RockPaperScissors/index.html
+++ b/RockPaperScissors/index.html
@@ -33,9 +33,10 @@
     <!-- Game images -->
     <div class="match">
         <h2 class="winner">Choose an option</h2>
+        <div class="hands">
           <img class="player-hand" src="./RockPaperScissorsImages/rock.png" alt="">
           <img class="computer-hand" src="./RockPaperScissorsImages/rock.png" alt="">
-      </div>
+        </div>
 
       <!-- buttons for rock, paper and scissors -->
       <div class="options">
@@ -43,7 +44,7 @@
         <button class="paper">paper</button>
         <button class="scissors">scissors</button>
       </div>
-      
+    </div>
   </section>
   
   <script src="./RockPaperScissors.js"></script>
