Added JavaScript Interactivity

--- a/RockPaperScissors/index.html
+++ b/RockPaperScissors/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <!-- Game images -->
-    <div class="match">
+    <div class="match fadeOut">
         <h2 class="winner">Choose an option</h2>
         <div class="hands">
           <img class="player-hand" src="./RockPaperScissorsImages/rock.png" alt="">
